# NeSyCat-HaskTorch

./: .gitignore  .mcp.json  BinaryMainRealBeta.hs  CLAUDE.md  cabal.project  media_path.txt  nesycat-hasktorch.cabal
.claude/: CLAUDE.md  ISSUES.md
.claude/agents/: analyze-build-failure-and-suggest-fixes.md  auto-commit-verified-changes-to-git.md  build-the-project-with-cabal.md  consolidate-verification-results-into-report.md  generate-fix-plan-for-build-failure.md  generate-fix-plan-from-issuesmd.md  run-experiments-and-capture-scorestimes.md  update-claude-docs-to-match-current-project-state.md  verify-abcdefg-layer-consistency.md  write-build-failure-to-claudeissuesmd.md  write-current-issues-to-claudeissuesmd.md
.claude/commands/: nesycat-verify.md
A1_Syntax/B2_Typological/: TENS_Vocab.hs
A1_Syntax/B3_Logical/: A2MonBLat.hs
A1_Syntax/B4_NonLogical/: Binary_Vocab.hs  MNIST_Vocab.hs
A2_Interpretation/B3_Logical/: Boolean.hs  Real.hs  TensUniform.hs  Tensor.hs
A2_Interpretation/B4_NonLogical/: Binary.hs  Binary_MLP.hs  MNIST.hs  MNIST_Bridge.hs  MNIST_DATA.hs  MNIST_MLP.hs  MNIST_TENS.hs
A3_Semantics/B4_NonLogical/: Binary_Training.hs  MNIST_Training.hs  Training.hs
A_Categorical/A_Category/: Hask.hs  STAR.hs
A_Categorical/A_Signature/: CatSig.hs  HaskSig.hs
A_Categorical/BA_Interpretation/: StarIntp.hs
A_Categorical/B_Realization/: HaskRlz.hs
A_Categorical/B_Theory/: StarTheory.hs
A_Categorical/B_Vocabulary/: HaskVocab.hs  StarVocab.hs
A_Categorical/C_Inhabitation/: StarInhabitation.hs
A_Categorical/C_TypeSystem/: StarTypes.hs
A_Categorical/C_Vocabulary/: CatVocab.hs  HaskVocab.hs
A_Categorical/DA_Realization/: Dist.hs  Giry.hs
A_Categorical/D_Interpretation/: HaskReal.hs
A_Categorical/D_Theory/: HaskTheory.hs
A_Categorical/D_Vocabulary/: StarVocab.hs
A_Categorical/E_Extension/: HaskExtension.hs
A_Categorical/F_Interpretation/: HaskInt.hs
A_Syntax/A_Categorical/: CatVocab.hs
A_Syntax/B_Logical/: A2MonBLat.hs  FDATA_Vocab.hs  TENS_Vocab.hs  TwoMonBLat.hs
A_Syntax/B_Typological/: DATA_Vocab.hs  FDATA_Vocab.hs  TENS_Vocab.hs
A_Syntax/C_Logical/: A2MonBLat.hs  TwoMonBLat.hs
A_Syntax/C_NonLogical/: BinaryVocab.hs  Countable_Vocab.hs  Crossing_Vocab.hs  DATA_Vocab.hs  Dice_Vocab.hs  MNIST_Vocab.hs  Weather_Vocab.hs
A_Syntax/D_Grammatical/: Formulas.hs
A_Syntax/D_NonLogical/: BinaryVocab.hs  Binary_Vocab.hs  Countable_Vocab.hs  Crossing_Vocab.hs  Dice_Vocab.hs  MNIST_Vocab.hs  Weather_Vocab.hs
A_Syntax/E_Grammatical/: Formulas.hs
B_Interpretation/B_Logical/: Boolean.hs  Goedel.hs  JitCompile.hs  LTNp.hs  Lukasiewicz.hs  Product.hs  Real.hs  SProd.hs  TensReal.hs  TensRealBeta.hs  TensUniform.hs  Tensor.hs
B_Interpretation/B_Typological/: DATA.hs  FDATA.hs  TENS.hs
B_Interpretation/C_Logical/: Boolean.hs  Goedel.hs  JitCompile.hs  LTNp.hs  Lukasiewicz.hs  Product.hs  Real.hs  SProd.hs  TensReal.hs  TensReal.hs.bak  TensRealBeta.hs  TensUniform.hs  Tensor.hs
B_Interpretation/C_NonLogical/: BinaryReal.hs  BinaryRealMLP.hs  BinaryUniform.hs  BinaryUniformMLP.hs  Countable.hs  Crossing.hs  Dice.hs  MNIST.hs  MNIST_MLP.hs  Supremum.hs  Weather.hs
B_Interpretation/D_Grammatical/: BinaryFormulasReal.hs  BinaryFormulasRealBeta.hs  BinaryFormulasUniform.hs  BinaryMainReal.hs  BinaryMainRealJIT.hs  BinaryMainUniform.hs  BinaryMainUniformJIT.hs  MNISTMain.hs  Main.hs
B_Interpretation/D_NonLogical/: Binary.hs  BinaryReal.hs  BinaryRealMLP.hs  BinaryUniform.hs  BinaryUniformMLP.hs  Binary_MLP.hs  Binary_MLP_Real.hs  Binary_Real.hs  Countable.hs  Crossing.hs  Dice.hs  MNIST.hs  MNIST_MLP.hs  Supremum.hs  Weather.hs
B_Interpretation/E_Grammatical/: BinaryFormulasReal.hs  BinaryFormulasRealBeta.hs  BinaryFormulasUniform.hs  BinaryMain.hs  BinaryMainJIT.hs  BinaryMainJITReal.hs  BinaryMainReal.hs  BinaryMainRealJIT.hs  BinaryMainUniform.hs  BinaryMainUniformJIT.hs  MNISTMain.hs  Main.hs
B_Logical/A_Category/: Tens.hs
B_Logical/A_Signature/: A2MonBLatSig.hs
B_Logical/BA_Interpretation/: Boolean.hs  FDATA.hs  Goedel.hs  JitCompile.hs  LTNp.hs  Lukasiewicz.hs  Product.hs  Real.hs  SProd.hs  TensReal.hs  Tensor.hs
B_Logical/B_Theory/: A2MonBLatTheory.hs  TwoMonBLatTheory.hs
B_Logical/B_Vocabulary/: FDATA_Vocab.hs  FdataVocab.hs  TENS_Vocab.hs  TensVocab.hs
B_Logical/C_Category/: Boolean.hs  DATA.hs  FDATA.hs  Goedel.hs  JitCompile.hs  LTNp.hs  Lukasiewicz.hs  Product.hs  Real.hs  SProd.hs  TENS.hs  TensReal.hs  TensRealBeta.hs  TensUniform.hs  Tensor.hs
B_Logical/C_TypeSystem/: FData.hs  FTens.hs
B_Logical/DA_Realization/: ExpectDist.hs  ExpectGiry.hs  Supremum.hs
B_Logical/D_Interpretation/: Boolean.hs  DATA.hs  FDATA.hs  Goedel.hs  LTNp.hs  Lukasiewicz.hs  Product.hs  Real.hs  SProd.hs  TENS.hs  TensReal.hs  TensRealBeta.hs  TensUniform.hs  Tensor.hs
B_Logical/D_Theory/: A2MonBLatTheory.hs  TwoMonBLatTheory.hs
B_Logical/D_Vocabulary/: FdataVocab.hs  QuantifierVocab.hs  TensVocab.hs
B_Logical/F_Interpretation/: Boolean.hs  FDATA.hs  Goedel.hs  JitCompile.hs  LTNp.hs  Lukasiewicz.hs  Product.hs  Real.hs  SProd.hs  TensReal.hs  TensRealBeta.hs  Tensor.hs
B_Logical/G_Parameters/: BetaTrainingReal.hs
C_Domain/A_Category/: Data.hs
E_Benchmark/: bench_ltn_tf.py  bench_ltn_torch.py  run_all_binary.sh
F_Benchmark/: BinaryBenchmark.hs  bench_mlp_baseline.py
F_Statistical/: BetaLambdaSweep.hs  BinaryBenchmark.hs  BinaryBenchmarkBeta.hs  LambdaSweep.hs  avg_benchmark.sh
Train/: BinaryTrain.hs  BinaryTrainBeta.hs  BinaryTrainJIT.hs  CountableTrain.hs  CrossingTrain.hs  DiceTrain.hs  MnistTrain.hs  Sweep100.hs  WeatherTrain.hs
_F_Training/: BinaryTrain.hs  BinaryTrainBeta.hs  BinaryTrainJIT.hs  BinaryTrainLib.hs  CountableTrain.hs  CrossingTrain.hs  DiceTrain.hs  MnistTrain.hs  Sweep100.hs  WeatherTrain.hs
_String Diagrams/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/: BinaryMain.hs  MNISTMain.hs  Main.hs
benchmark/: binary_results_pmean.txt  ltn_tf_1000.out  ltn_torch_1000.out  nesycat_binary.out  plot_results.py  plot_results_pmean.py
data/mnist/: MNIST_Loader.hs  (+3 more)
(+295 files in other folders)
