cabal-version: 2.4
name: nesycat-hasktorch
version: 0.1.0.0
synopsis: NeSyCat Framework with HaskTorch
description: Typed tensor category for the NeSyCat neurosymbolic framework
license: MIT
author: User
maintainer: user@example.com

library
  exposed-modules:
    -- Alpha: Categorical
    A_Categorical.A_Category.STAR,
    A_Categorical.B_Theory.StarTheory,
    A_Categorical.BA_Interpretation.StarIntp,
    A_Categorical.C_TypeSystem.StarTypes,
    A_Categorical.D_Vocabulary.StarVocab,
    A_Categorical.DA_Realization.Dist,
    A_Categorical.DA_Realization.Giry,
    -- Beta: Logical
    B_Logical.B_Theory.TwoMonBLatTheory,
    B_Logical.B_Theory.A2MonBLatTheory,
    B_Logical.C_TypeSystem.FData,
    B_Logical.C_TypeSystem.FTens,
    B_Logical.D_Vocabulary.QuantifierVocab,
    B_Logical.BA_Interpretation.Tensor,
    B_Logical.BA_Interpretation.Boolean,
    B_Logical.DA_Realization.Supremum,
    B_Logical.DA_Realization.ExpectDist,
    B_Logical.DA_Realization.ExpectGiry,
    -- Gamma: Domain
    C_Domain.C_TypeSystem.Data,
    C_Domain.C_TypeSystem.Tens,
    C_Domain.B_Theory.BinaryTheory,
    C_Domain.B_Theory.DiceTheory,
    C_Domain.B_Theory.CrossingTheory,
    C_Domain.B_Theory.CountableTheory,
    C_Domain.B_Theory.WeatherTheory,
    C_Domain.BC_Extension.BinaryDataExtension,
    C_Domain.BC_Extension.BinaryTensExtension,
    C_Domain.BA_Interpretation.BinaryReal,
    C_Domain.BA_Interpretation.BinaryRealMLP,
    C_Domain.BA_Interpretation.Countable,
    C_Domain.BA_Interpretation.Crossing,
    C_Domain.BA_Interpretation.Dice,
    C_Domain.BA_Interpretation.Weather,
    -- Delta: Grammatical
    D_Grammatical.B_Theory.BinaryFormulas,
    D_Grammatical.B_Theory.DiceFormulas,
    D_Grammatical.B_Theory.CrossingFormulas,
    D_Grammatical.B_Theory.WeatherFormulas,
    D_Grammatical.B_Theory.CountableFormulas,
    D_Grammatical.BA_Interpretation.BinaryIntpTens,
    D_Grammatical.BA_Interpretation.BinaryIntpData,
    -- Epsilon: Inferential
    E_Inferential.A_Category.Diff,
    E_Inferential.B_Theory.InferenceTheory,
    E_Inferential.D_Vocabulary.InferenceVocabTens,
    E_Inferential.DA_Realization.InferenceRlzTens,
    E_Inferential.BA_Interpretation.InferenceIntpTens,
    -- Zeta: Statistical
    F_Statistical.B_Theory.BenchmarkTheory,
    F_Statistical.D_Vocabulary.BenchmarkVocab,
    F_Statistical.DA_Realization.BenchmarkRlzData,
    F_Statistical.BA_Interpretation.BenchmarkIntpData,
    -- Training library
    BinaryTrainLib
  hs-source-dirs: ., _F_Training
  build-depends:
    base >=4.16,
    bytestring,
    containers,
    mtl,
    numeric-tools,
    hasktorch,
    statistics,
    time
  default-language: Haskell2010

executable binary-benchmark
  main-is: BinaryBenchmark.hs
  hs-source-dirs: F_Statistical
  ghc-options: -rtsopts
  build-depends:
    base,
    nesycat-hasktorch,
    mtl,
    containers,
    hasktorch,
    time
  default-language: Haskell2010

executable binary-test-real
  main-is: BinaryTrain.hs
  hs-source-dirs: _F_Training
  ghc-options: -rtsopts
  build-depends:
    base,
    nesycat-hasktorch,
    mtl,
    containers,
    hasktorch,
    time
  default-language: Haskell2010

executable binary-test-jit-real
  main-is: BinaryTrainJIT.hs
  hs-source-dirs: _F_Training
  ghc-options: -rtsopts
  build-depends:
    base,
    nesycat-hasktorch,
    mtl,
    containers,
    hasktorch,
    time
  default-language: Haskell2010

executable binary-test-real-beta
  main-is: BinaryTrainBeta.hs
  hs-source-dirs: _F_Training
  ghc-options: -rtsopts
  build-depends:
    base,
    nesycat-hasktorch,
    mtl,
    containers,
    hasktorch,
    time,
    statistics
  default-language: Haskell2010

executable dice-test
  main-is: DiceTrain.hs
  hs-source-dirs: _F_Training
  build-depends:
    base,
    nesycat-hasktorch,
    containers
  default-language: Haskell2010

executable crossing-test
  main-is: CrossingTrain.hs
  hs-source-dirs: _F_Training
  build-depends:
    base,
    nesycat-hasktorch,
    containers
  default-language: Haskell2010

executable weather-test
  main-is: WeatherTrain.hs
  hs-source-dirs: _F_Training
  build-depends:
    base,
    nesycat-hasktorch,
    containers
  default-language: Haskell2010

executable countable-test
  main-is: CountableTrain.hs
  hs-source-dirs: _F_Training
  build-depends:
    base,
    nesycat-hasktorch,
    containers
  default-language: Haskell2010
